--- a/app.json
+++ b/app.json
@@ -1,8 +1,11 @@
 {
   "pages": [
+    "pages/login/login",
     "pages/index/index",
     "pages/logs/logs",
     "pages/abc/abc"
+    
+
   ],
   "window": {
     "enablePullDownRefresh": true,
